<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.android.scorekeeper.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textSize="24sp"
            android:textColor="@color/attributeTextColor"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/teamNames"
            android:background="@color/attributeBackground"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/teamScoreA"
            android:layout_marginEnd="3dp"
            android:layout_weight="2"
            android:textStyle="bold"
            android:onClick="addScoreA"
            android:textColor="@color/scoreColor"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="36sp"
            android:text="@string/defaultValue" />
        <TextView
            android:layout_width="0dp"
            android:id="@+id/teamScoreB"
            android:layout_weight="2"
            android:layout_marginStart="3dp"
            android:layout_height="wrap_content"
            android:onClick="addScoreB"
            android:gravity="center"
            android:textSize="36sp"
            android:layout_gravity="center"
            android:textColor="@color/scoreColor"
            android:textStyle="bold"
            android:text="@string/defaultValue"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:background="@color/attributeBackground"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/attributeTextColor"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/teamNames"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="6dp">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:onClick="addAttemptsA"
        android:layout_marginEnd="8dp"
        android:id="@+id/totalAttemptsA"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:textColor="@color/scoreColor"
        android:background="@color/colorAccent"
        android:text="@string/defaultValue"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/attributeTextColor"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/attempts"
        android:background="@color/attributeBackground"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_weight="3"
        android:onClick="addAttemptsB"
        android:id="@+id/totalAttemptsB"
        android:textStyle="bold"
        android:text="@string/defaultValue"
        android:layout_marginStart="8dp"
        android:textColor="@color/scoreColor"
        android:gravity="center"
        android:background="@color/colorAccent"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="6dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            android:id="@+id/shotsOnTargetA"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/defaultValue"
            android:onClick="addShotsOnTargetA"
            android:textColor="@color/scoreColor"
            android:background="@color/colorAccent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/attributeTextColor"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/shotsOnTarget"
            android:background="@color/attributeBackground"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:onClick="addShotsOnTargetB"
            android:id="@+id/shotOnTargetB"
            android:textSize="25sp"
            android:layout_weight="3"
            android:text="@string/defaultValue"
            android:textColor="@color/scoreColor"
            android:gravity="center"
            android:background="@color/colorAccent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:onClick="addPassesA"
            android:textColor="@color/scoreColor"
            android:id="@+id/totalPassesA"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:text="@string/defaultValue"

            android:background="@color/colorAccent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_gravity="center"
            android:textColor="@color/attributeTextColor"
            android:textStyle="bold"
            android:text="@string/passes"
            android:background="@color/attributeBackground"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="addPassesB"
            android:layout_weight="3"
            android:id="@+id/totalPassesB"
            android:textStyle="bold"
            android:textColor="@color/scoreColor"
            android:textSize="25sp"
            android:text="@string/defaultValue"
            android:gravity="center"
            android:background="@color/colorAccent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@color/scoreColor"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            android:onClick="addCornerA"
            android:id="@+id/cornersA"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/defaultValue"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:textColor="@color/attributeTextColor"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:background="@color/attributeBackground"
            android:textStyle="bold"
            android:text="@string/corners" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="3"
            android:onClick="addCornerB"
            android:id="@+id/cornersB"
            android:textStyle="bold"
            android:textColor="@color/scoreColor"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/defaultValue"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textColor="@color/scoreColor"
            android:textStyle="bold"
            android:id="@+id/foulsA"
            android:layout_marginEnd="8dp"
            android:onClick="addFoulsA"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/defaultValue"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/attributeBackground"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/attributeTextColor"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/fouls" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/scoreColor"
            android:layout_marginStart="8dp"
            android:layout_weight="3"
            android:onClick="addFoulsB"
            android:textSize="25sp"
            android:id="@+id/foulsB"
            android:textStyle="bold"
            android:text="@string/defaultValue"
            android:gravity="center"
            android:background="@color/colorAccent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="6dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/yellowCardA"
            android:onClick="addYellowCardA"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/scoreColor"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            android:text="@string/defaultValue"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:background="@color/attributeBackground"
            android:textColor="@color/attributeTextColor"
            android:textStyle="bold"
            android:text="@string/yCard" />
        <TextView
            android:layout_width="0dp"
            android:textColor="@color/scoreColor"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:id="@+id/yellowCardB"
            android:onClick="addYellowCardB"
            android:layout_weight="3"
            android:layout_marginStart="8dp"
            android:text="@string/defaultValue"
            android:gravity="center"
            android:background="@color/colorAccent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:onClick="addRedCardA"
            android:layout_weight="3"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/defaultValue"
            android:id="@+id/redCardA"
            android:textColor="@color/scoreColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:background="@color/attributeBackground"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/attributeTextColor"
            android:gravity="center"
            android:text="@string/rCard"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/scoreColor"
            android:textStyle="bold"
            android:layout_weight="3"
            android:id="@+id/redCardB"
            android:textSize="25sp"
            android:onClick="addRedCardB"
            android:text="@string/defaultValue"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:background="@color/colorAccent"/>
    </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:text="@string/resetButton"
        android:background="@color/colorAccent"
        android:onClick="resetValues"/>


</RelativeLayout>
